Fixed scrollbar moving the centered content

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -24,6 +24,16 @@
 
 
 /*
+ * SCROLLBAR FIX
+ * always show the scrollbar so centered content doesn't move when the scrollbar
+ * appears
+ */
+html {
+  overflow-y: scroll;
+}
+
+
+/*
  * TEXT STYLES
  */
 #content {
@@ -130,3 +140,22 @@ p          { margin-top: 10px; }
   }
 }
 
+
+/*
+ * RESPONSIVE YOUTUBE VIDEOS
+ * 
+ */
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px; height: 0; overflow: hidden;
+
+  iframe, object, embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+ 
